Add GetByID and GetByName
